--- a/yourSite/index.html
+++ b/yourSite/index.html
@@ -97,6 +97,42 @@
   <div class="w3-container w3-padding-32" id="project">
     <h2 class="w3-center">FEATURED PROJECTS</h2>
   </div>
+  <!-- Slideshow -->
+  <div class="w3-container">
+    <div class="w3-display-container mySlides">
+      <img src="images/gallery1.jpg" class="gallery"/>
+      <div class="w3-display-topleft w3-container w3-padding-32">
+        <span class="w3-white w3-padding-large w3-animate-bottom">15 Laight Street, New York, NY</span>
+      </div>
+    </div>
+    <div class="w3-display-container mySlides">
+      <img src="images/gallery2.jpg" class="gallery"/>
+      <div class="w3-display-middle w3-container w3-padding-32">
+        <span class="w3-white w3-padding-large w3-animate-bottom">The Lighthouse, South San Francisco, CA</span>
+      </div>
+    </div>
+    <div class="w3-display-container mySlides">
+      <img src="images/gallery3.jpg" class="gallery"/>
+      <div class="w3-display-topright w3-container w3-padding-32">
+        <span class="w3-white w3-padding-large w3-animate-bottom">Loffler Companies, St. Louis Park, MN</span>
+      </div>
+    </div>
+
+    <!-- Slideshow next/previous buttons -->
+    <div class="w3-container w3-dark-grey w3-padding w3-xlarge">
+      <div class="w3-left" onclick="plusDivs(-1)">
+        <i class="fa fa-arrow-circle-left w3-hover-text-teal"></i>
+      </div>
+      <div class="w3-right" onclick="plusDivs(1)">
+        <i class="fa fa-arrow-circle-right w3-hover-text-teal"></i>
+      </div>
+      <div class="w3-center">
+        <span class="w3-tag demodots w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+        <span class="w3-tag demodots w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+        <span class="w3-tag demodots w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+      </div>
+    </div>
+  </div>
 
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
@@ -369,6 +405,37 @@
 </footer>
 
 <script>
+    // Slideshow
+    var slideIndex = 1;
+  showDivs(slideIndex);
+
+  function plusDivs(n) {
+    showDivs((slideIndex += n));
+  }
+
+  function currentDiv(n) {
+    showDivs((slideIndex = n));
+  }
+
+  function showDivs(n) {
+    var i;
+    var x = document.getElementsByClassName("mySlides");
+    var dots = document.getElementsByClassName("demodots");
+    if (n > x.length) {
+      slideIndex = 1;
+    }
+    if (n < 1) {
+      slideIndex = x.length;
+    }
+    for (i = 0; i < x.length; i++) {
+      x[i].style.display = "none";
+    }
+    for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" w3-white", "");
+    }
+    x[slideIndex - 1].style.display = "block";
+    dots[slideIndex - 1].className += " w3-white";
+  }
 </script>
 
   </body>
