--- a/yourSite/index.html
+++ b/yourSite/index.html
@@ -357,6 +357,7 @@
       <li><a href="#tabs-2">Academic Questions</a></li>
       <li><a href="#tabs-3">Generalization Questions</a></li>
     </ul>
+    <div class="accordion">
     <div id="tabs-1">
       <h2>Generalization Questions</h2>
       <p>What is the difference between an architect and engineer?</p>
@@ -394,6 +395,7 @@
       <p>What services can an architect provide? </p>
       <p>An architect can provide numerous services based on your project requirements. This includes feasibility studies to determine what can be built, developing the design/architectural plans, working with the engineer and contractor to bring your project to life, providing permit documents and much more. It is important to check that the architect you want to hire can provide all the services needed for your project.</p>
     </div>
+  </div>
   </div>
   </div>
 
