--- a/yourSite/index.html
+++ b/yourSite/index.html
@@ -306,7 +306,7 @@
   
   <!-- Container -->
   <div class="w3-container" style="position:relative">
-    <a onclick="w3_open()" class="w3-button w3-xlarge w3-circle w3-teal ">+</a>
+    <a onclick="w3_open()" class="w3-button w3-xlarge w3-circle service-button">+</a>
   </div>
 <!-- Team Container -->
 <div class="w3-container w3-padding-64 w3-center" id="team">
@@ -360,40 +360,40 @@
     <div class="accordion">
     <div id="tabs-1">
       <h2>Generalization Questions</h2>
-      <p>What is the difference between an architect and engineer?</p>
-      <p>The architect and engineer work together to build a structure but they fulfil different functions. An architect plans how the space will look and feel for the intended purpose, while an engineer provides plans to ensure structural safety and integrity of the building function is established. Engineering has different branches such as civil engineering, structural engineering, MEP engineering and so on.</p>
-      <p>What is the difference between architecture and interior design?</p>
-      <p>Architecture involves the planning or designing of a structure. This means deciding the look and feel of the building and creating a vision for how it will come to life. Interior design involves bringing the space together once the structure is complete. This can include furniture selection and placement, wall colors, accessories and much more to enhance the interiors for aesthetic value.</p>
-      <p>What is the difference between an architect and a civil engineer?</p>
-      <p>An architect’s work focuses on the design of the space and planning the aesthetics of the building. A civil engineer often gets involved in the first and vital part of projects and is responsible for site preparation activities like sewage plan, grading &amp; drainage plans, water systems, erosion control plans, utility plans and more.</p>
+      <p class="question">What is the difference between an architect and engineer?</p>
+      <p class="answer">The architect and engineer work together to build a structure but they fulfil different functions. An architect plans how the space will look and feel for the intended purpose, while an engineer provides plans to ensure structural safety and integrity of the building function is established. Engineering has different branches such as civil engineering, structural engineering, MEP engineering and so on.</p>
+      <p class="question">What is the difference between architecture and interior design?</p>
+      <p class="answer">Architecture involves the planning or designing of a structure. This means deciding the look and feel of the building and creating a vision for how it will come to life. Interior design involves bringing the space together once the structure is complete. This can include furniture selection and placement, wall colors, accessories and much more to enhance the interiors for aesthetic value.</p>
+      <p class="question">What is the difference between an architect and a civil engineer?</p>
+      <p class="answer">An architect’s work focuses on the design of the space and planning the aesthetics of the building. A civil engineer often gets involved in the first and vital part of projects and is responsible for site preparation activities like sewage plan, grading &amp; drainage plans, water systems, erosion control plans, utility plans and more.</p>
     </div>
     <div id="tabs-2">
       <h2>Academic Questions</h2>
-      <p>What is the best architecture school?</p>
-      <p>This is a common and understandable question. The answer is more about how you see yourself than it is about having a list of schools ranked by quality. As one of our recent blog posts explains, there is no objective way to say which are the best schools. The more you understand what you want out of an architecture degree, the easier it will be to select a school. </p>
-      <p>What is the difference between a B.Arch and an M.Arch?</p>
-      <p>The professional degrees accredited by NAAB or CACB have essentially the same professional content requirements for a B.Arch, M.Arch, or a D.Arch. General education courses are expected in all three degree types. The definition of “graduate level” study is made by the institution.</p>
-      <p>Can I expect a higher salary with an M.Arch.?</p>
-      <p>In general, salaries in architecture firms are not calibrated by degree types, but by level of experience, personal skill-sets, and quality of work demonstrated by a review of the portfolio. Grade transcripts are rarely requested. Success in practice is a combination of many factors, and the professional degree type alone does not affect salary levels, like it might in other fields. However, lack of a professional degree can negatively impact long-term success in licensure issues.</p>
-      <p>Can I get a job with a pre-professional architecture degree (in a 4+2 type of program)?</p>
-      <p>Yes, but you likely will not be able to get a license to practice independently. Having completed the first part of a 4+2 program is often reasonable preparation for an entry-level job in a firm. However, long-term success in architectural practice may be limited by not having a professional degree (NAAB or CACB), which is required by most states for a license. Furthermore, NCARB standards for reciprocity across state borders require a NAAB degree.  </p>
-      <p>Would it be a good idea to attend a community college for two years and finish up at an NAAB program?</p>
-      <p>Some community colleges have a formal “articulation agreement” with a specific NAAB program that provides a cost-effective path to a professional degree. However, you should not assume that community college courses will meet professional course requirements and give you advance standing in any NAAB program. While many professional programs may accept individual technical courses from a community college, it is quite common to place the transfer student in the first year of a 4- or 5-year design sequence. If you do attend community college, maintain good records including all course materials and your assignments. </p>
-      <p>What is a “professional degree” in architecture? How do I know if a program is professionally accredited?</p>
-      <p>A “professional degree” in architecture refers to those degrees that satisfy North American educational requirements for becoming a licensed architect. Most state and provincial registration boards require an applicant for licensure to have graduated from a program accredited by the National Architectural Accrediting Board (NAAB), in the United States, or by the Canadian Architectural Certification Board (CACB), in Canada. The accrediting process is intended to verify that each accredited program substantially meets those standards that, as a whole, comprise an appropriate education for an architect. </p>
+      <p class="question">What is the best architecture school?</p>
+      <p class="answer">This is a common and understandable question. The answer is more about how you see yourself than it is about having a list of schools ranked by quality. As one of our recent blog posts explains, there is no objective way to say which are the best schools. The more you understand what you want out of an architecture degree, the easier it will be to select a school. </p>
+      <p class="question">What is the difference between a B.Arch and an M.Arch?</p>
+      <p class="answer">The professional degrees accredited by NAAB or CACB have essentially the same professional content requirements for a B.Arch, M.Arch, or a D.Arch. General education courses are expected in all three degree types. The definition of “graduate level” study is made by the institution.</p>
+      <p class="question">Can I expect a higher salary with an M.Arch.?</p>
+      <p class="answer">In general, salaries in architecture firms are not calibrated by degree types, but by level of experience, personal skill-sets, and quality of work demonstrated by a review of the portfolio. Grade transcripts are rarely requested. Success in practice is a combination of many factors, and the professional degree type alone does not affect salary levels, like it might in other fields. However, lack of a professional degree can negatively impact long-term success in licensure issues.</p>
+      <p class="question">Can I get a job with a pre-professional architecture degree (in a 4+2 type of program)?</p>
+      <p class="answer">Yes, but you likely will not be able to get a license to practice independently. Having completed the first part of a 4+2 program is often reasonable preparation for an entry-level job in a firm. However, long-term success in architectural practice may be limited by not having a professional degree (NAAB or CACB), which is required by most states for a license. Furthermore, NCARB standards for reciprocity across state borders require a NAAB degree.  </p>
+      <p class="question">Would it be a good idea to attend a community college for two years and finish up at an NAAB program?</p>
+      <p class="answer">Some community colleges have a formal “articulation agreement” with a specific NAAB program that provides a cost-effective path to a professional degree. However, you should not assume that community college courses will meet professional course requirements and give you advance standing in any NAAB program. While many professional programs may accept individual technical courses from a community college, it is quite common to place the transfer student in the first year of a 4- or 5-year design sequence. If you do attend community college, maintain good records including all course materials and your assignments. </p>
+      <p class="question">What is a “professional degree” in architecture? How do I know if a program is professionally accredited?</p>
+      <p class="answer">A “professional degree” in architecture refers to those degrees that satisfy North American educational requirements for becoming a licensed architect. Most state and provincial registration boards require an applicant for licensure to have graduated from a program accredited by the National Architectural Accrediting Board (NAAB), in the United States, or by the Canadian Architectural Certification Board (CACB), in Canada. The accrediting process is intended to verify that each accredited program substantially meets those standards that, as a whole, comprise an appropriate education for an architect. </p>
     </div>
     <div id="tabs-3">
       <h2>Generalization Questions</h2>
-      <p>What is 3D architectural rendering?</p>
-      <p>Architectural rendering involves creating three dimensional images to visualize the architectural design. It illustrates what the space will look like once it’s built. A 3D rendering helps develop and display designs more accurately. It presents a very life-like representation of the design which makes it easier for investors and developers to market and sell or lease their property.</p>
-      <p>What is an architectural floor plan?</p>
-      <p>An architectural plan shows a floor space from above. It includes the dimensions, physical elements, and relationships between rooms, spaces and other features. It is one of the main elements of an architectural design.</p>
-      <p>Should I hire an architect for my building project?</p>
-      <p>Although it is generally recommended to hire an architect, it is not a requirement for every project. Some structures can be designed without hiring an architect (such as certain single family homes upto 2 storeys). But before you decide not to hire an architect, you should check with the building department to confirm the requirements of your project. The building department will consider all factors and let you know if it is required of you to hire a licensed architect.</p>
-      <p>How should I select an architect for my project?</p>
-      <p>There is no doubt that selecting the right architect is important for a successful project. You can ask for recommendations from friends or family or look up architects online but you should consider several major factors to make a decision, such as: area of experience and expertise, availability, number of completed projects, services offered, and cost. You can also look at their previous projects to see their work and ask for references to get an opinion.</p>
-      <p>What services can an architect provide? </p>
-      <p>An architect can provide numerous services based on your project requirements. This includes feasibility studies to determine what can be built, developing the design/architectural plans, working with the engineer and contractor to bring your project to life, providing permit documents and much more. It is important to check that the architect you want to hire can provide all the services needed for your project.</p>
+      <p class="question">What is 3D architectural rendering?</p>
+      <p class="answer">Architectural rendering involves creating three dimensional images to visualize the architectural design. It illustrates what the space will look like once it’s built. A 3D rendering helps develop and display designs more accurately. It presents a very life-like representation of the design which makes it easier for investors and developers to market and sell or lease their property.</p>
+      <p class="question">What is an architectural floor plan?</p>
+      <p class="answer">An architectural plan shows a floor space from above. It includes the dimensions, physical elements, and relationships between rooms, spaces and other features. It is one of the main elements of an architectural design.</p>
+      <p class="question">Should I hire an architect for my building project?</p>
+      <p class="answer">Although it is generally recommended to hire an architect, it is not a requirement for every project. Some structures can be designed without hiring an architect (such as certain single family homes upto 2 storeys). But before you decide not to hire an architect, you should check with the building department to confirm the requirements of your project. The building department will consider all factors and let you know if it is required of you to hire a licensed architect.</p>
+      <p class="question">How should I select an architect for my project?</p>
+      <p class="answer">There is no doubt that selecting the right architect is important for a successful project. You can ask for recommendations from friends or family or look up architects online but you should consider several major factors to make a decision, such as: area of experience and expertise, availability, number of completed projects, services offered, and cost. You can also look at their previous projects to see their work and ask for references to get an opinion.</p>
+      <p class="question">What services can an architect provide? </p>
+      <p class="answer">An architect can provide numerous services based on your project requirements. This includes feasibility studies to determine what can be built, developing the design/architectural plans, working with the engineer and contractor to bring your project to life, providing permit documents and much more. It is important to check that the architect you want to hire can provide all the services needed for your project.</p>
     </div>
   </div>
   </div>
