--- a/yourSite/index.html
+++ b/yourSite/index.html
@@ -408,7 +408,7 @@
     <div class="w3-padding-16"><span class="w3-xlarge contact-bar">Contact Us</span></div>
       <h3>Address</h3>
       <p>Swing by for a cup of coffee, or whatever.</p>
-      <p><i class="fa fa-map-marker contact-text-teal w3-xlarge"></i>  Chicago, US</p>
+      <p><i class="fa fa-map-marker contact-text-teal w3-xlarge"></i>  Ohio, US</p>
       <p><i class="fa fa-phone contact-text-teal w3-xlarge"></i>  +00 1515151515</p>
       <p><i class="fa fa-envelope-o contact-text-teal w3-xlarge"></i>  test@test.com</p>
     </div>
@@ -440,9 +440,9 @@
 <img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%;">
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-32 w3-light-grey w3-center">
+<footer class="w3-container w3-padding-32 w3-center footer">
   <h4>Footer</h4>
-  <a href="#" class="w3-button w3-black w3-margin"
+  <a href="#" class="w3-button w3-margin top-button"
     ><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a
   >
   <div class="w3-xlarge w3-section">
@@ -454,15 +454,9 @@
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
   <p>
-    Powered by
-    <a
-      href="https://www.w3schools.com/w3css/default.asp"
-      title="W3.CSS"
-      target="_blank"
-      class="w3-hover-text-green"
-      >w3.css</a
-    >
-  </p>
+    Written by Ngoc Uong.
+    At Miami University, Oxford, Ohio, USA.
+    © Michelangler, 2023</p>
 </footer>
 
 <script>
